[gd_scene load_steps=4 format=3 uid="uid://c5m6omty1hpx5"]

[ext_resource type="PackedScene" uid="uid://crlao8m6rllnh" path="res://ui/view_screens/drone_info_view.tscn" id="1"]
[ext_resource type="Script" path="res://ui/components/drone_mirror.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://c73j0q2ov7s3w" path="res://assets/visual/lifeforms/drone_128.png" id="2_qxg3c"]

[node name="DroneMirror" type="Control"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 3
anchor_right = 0.0666667
anchor_bottom = 0.118519
offset_right = -6.10352e-05
offset_bottom = -0.000518799
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2")
metadata/_edit_use_anchors_ = true

[node name="DroneIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_qxg3c")
expand_mode = 1
stretch_mode = 5

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
disabled = true
shortcut_in_tooltip = false
flat = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="DroneStatsPopup" parent="CanvasLayer" instance=ExtResource("1")]
visible = false
anchor_right = 0.135
anchor_bottom = 0.227
offset_right = 0.799988
offset_bottom = -0.160019

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
